// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro state react base 1`] = `
"import { useState as _useState } from "react";
export default () => {
  const [count, _setcount] = _useState(0);

  return (
    <button onClick={() => _setcount((_count) => (_count += 1))}>
      Clicked {count} {count === 1 ? "time" : "times"}
    </button>
  );
};
"
`;

exports[`macro state react hook 1`] = `
"import { useState as _useState } from "react";
export default function useHook() {
  const [v, _setv] = _useState(false);

  const s = () => {
    _setv((_v) => (_v = !_v));
  };

  return [v, s];
}
"
`;

exports[`macro state vue base 1`] = `
"import { ref as _ref } from "vue";
export default () => {
  const count = _ref(0);

  function hello() {
    let count = 1;
    count++;
  }

  return (
    <button onClick={() => (count.value += 1)}>
      Clicked {count.value} {count.value === 1 ? "time" : "times"}
    </button>
  );
};
"
`;

exports[`macro state vue state object 1`] = `
"import { ref as _ref } from "vue";
export default () => {
  const count = _ref({
    a: 1,
  });

  const foo = _ref([1, 2, 3]);

  function hello() {
    let count = 1;
    count++;
  }

  return (
    <button onClick={() => (count.value.a += 1)}>
      Clicked {count.value.a} {count.value.a === 1 ? "time" : "times"}
      {foo.value.map((i) => (
        <span>{i}</span>
      ))}
    </button>
  );
};
"
`;
